# multi-agent-ai

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  crewai_resume_assistant.py  custom_types.py  interview_materials.md  kevin_resume.md  pyproject.toml  tailored_resume.md  utils.py
crewai_tutorial/: L3_customer_support.ipynb  L4_tools_customer_outreach.ipynb  L6_collaboration_financial_analysis.ipynb  L7_job_application_crew.ipynb
templates/: index.html
